--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
       body {
         background-color: #302e2e;
         display: flex;
@@ -18,21 +23,36 @@
         display: flex;
         /* justify-content: space-between; */
       }
+      .damageContainer {
+        position: relative;
+        width: 100%;
+        height: 40px;
+      }
+      #healthBar .damageContainer:first-child {
+        display: flex;
+        justify-content: flex-end;
+      }
+      .healthBar {
+        position: absolute;
+        background-color: #2525b5;
+        right: 0;
+        top: 0;
+        bottom: 0;
+      }
       .p1Health {
         background-color: #eb5b1d;
         height: 40px;
         width: 100%;
+      }
+      .p2Health {
+        background-color: #dd17db;
+        height: 40px;
       }
       .timer {
         background-color: red;
         width: 100px;
         height: 75px;
         flex-shrink: 0;
-      }
-      .p2Health {
-        background-color: #dd17db;
-        height: 40px;
-        width: 100%;
       }
     </style>
     <script defer src="main.js"></script>
@@ -41,9 +61,15 @@
   <body>
     <div id="main">
       <div id="healthBar">
-        <div class="p1Health"></div>
+        <div class="damageContainer">
+          <div class="p1Health"></div>
+          <div class="healthBar" id="p1Health" style="width: 100%"></div>
+        </div>
         <div class="timer"></div>
-        <div class="p2Health"></div>
+        <div class="damageContainer">
+          <div class="p2Health"></div>
+          <div class="healthBar" id="p2Health" style="left: 0"></div>
+        </div>
       </div>
       <canvas></canvas>
     </div>
