refactoring JS2 and adjusting the ground

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       }
     </style>
     <script defer src="js/classes.js"></script>
+    <script defer src="js/utilites.js"></script>
     <script defer src="main.js"></script>
   </head>
 
