--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         right: 0;
       }
     </style>
+    <script defer src="js/const.js"></script>
     <script defer src="js/classes.js"></script>
     <script defer src="js/utilites.js"></script>
     <script defer src="main.js"></script>
