--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+      </style>
+    <style>
       * {
         margin: 0;
         padding: 0;
@@ -60,6 +63,7 @@
       }
       #matchResult {
         font-size: 100px;
+        font-family: 'Press Start 2P', cursive;
         position: absolute;
         color: #fff;
         display: none;
